# geometry

./: CMakeLists.txt  package.xml
include/rhoban_geometry/: circle.h  circle_cluster.h  ellipse.h  interpolation.h  parametric_line.h  parametric_line_cluster.h  point.h  point_cluster.h  segment.h
include/rhoban_geometry/3d/: intersection.h  pan_tilt.h  plane.h  ray.h
include/starkit_geometry/: circle.h  circle_cluster.h  ellipse.h  interpolation.h  parametric_line.h  parametric_line_cluster.h  point.h  point_cluster.h  segment.h
include/starkit_geometry/3d/: intersection.h  pan_tilt.h  plane.h  ray.h
src/rhoban_geometry/: Sources.cmake  circle.cpp  circle_cluster.cpp  interpolation.cpp  parametric_line.cpp  parametric_line_cluster.cpp  point.cpp  point_cluster.cpp  segment.cpp
src/rhoban_geometry/3d/: Sources.cmake  intersection.cpp  pan_tilt.cpp  plane.cpp  ray.cpp
src/starkit_geometry/: README.md  Sources.cmake  circle.cpp  circle_cluster.cpp  interpolation.cpp  parametric_line.cpp  parametric_line_cluster.cpp  point.cpp  point_cluster.cpp  segment.cpp
src/starkit_geometry/3d/: intersection.cpp  pan_tilt.cpp  plane.cpp  ray.cpp
tests/3d/: intersection.cpp  plane.cpp
