<?xml version="1.0"?>
<package>
  <name>starkit_geometry</name>
  <version>0.0.0</version>
  <description>Geometry library for starkit</description>

  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>
  <author email="lhofer@labri.fr">Ludovic Hofer</author>
  <author email="gpassault@labri.fr">Grégoire Passault</author>
  <author email="qrouxel@labri.fr">Quentin Rouxel</author>
  <author email="snguyen@labri.fr">Steve N'guyen</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>starkit_utils</build_depend> <!-- starkit/utils -->
  <run_depend>starkit_utils</run_depend>

  <export>
  </export>
</package>
